--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </div>
     <input type="text id="items">
     <button id="btnAddElement" onclick="addItem();">Add new item</button>
-    <script src="js/add-element.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
